Fix backward QML compatibility for Flickable.isAtBoundaryChanged()

QML code that imports any previous QtQuick version (e.g. 2.11) and connects to
any of the four 'at boundary' properties (atXEnd, atXBeginning, atYEnd and
atYBeginning) change notifier (e.g. atXEndChanged) stop working because the new
signals available only with new import, but the older import has no idea that
it could connect to the older notifier (isAtBoundaryChanged).

Remove revision number from the notifiers of the four 'at boundary' properties
to mostly fix backward compatibility until a better solution is available.

Fixes: QTBUG-71243
Change-Id: I9b4c944c62e0c6c83ceed765b7cd99519e9cd109
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>
Reviewed-by: Frederik Gladhorn <frederik.gladhorn@qt.io>